ghc-4335c07/testsuite/tests/overloadedrecflds/should_compile/T12609.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# OPTIONS_GHC -Werror -Wunused-top-binds #-}
module Main (main, T(MkT)) where

data T = MkT { _x :: Int }

main :: IO ()
main = return ()
