ghc-4335c07/testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail03.hs
-- Test that a top-level definition with the same name as a record
-- field is rejected

{-# LANGUAGE DuplicateRecordFields #-}

foo = True

data T = MkT { foo :: Int }

main = print foo
